# crypto

./: .gitignore  CLAUDE.md
backend/: README.md  pyproject.toml
backend/app/: config.py  database.py  main.py  market.py  portfolio.py  prices.py  routes.py  stream.py  watchlist.py
backend/tests/: conftest.py  test_api.py  test_database.py  test_health.py  test_portfolio.py  test_prices.py  test_simulator.py  test_stream.py  test_watchlist.py
planning/: PLAN.md  RESEARCH.md
